--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,37 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+# Создаем файл .gitignore в корне проекта
+cat > .gitignore << EOF
+# IDE
+.idea/
 *.iws
 *.iml
 *.ipr
+
+# Build
+build/
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+target/
+*.jar
+*.war
+*.ear
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# Gradle
+.gradle/
+gradle-app.setting
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temp
+tmp/
+temp/
+
+# Other
+*.class
+*.bak
+*.save
+EOF
